...
            DisplayDropDownIfActive(
                isSearchActive = isSearchActive,
                selectedFilterType = selectedFilterType,
                homeViewModel = homeViewModel)
          },
          bottomBar = { NavigationBar(navigation = navigation) },
          modifier = Modifier.fillMaxWidth().testTag("HomeScreen")) {
            when (val itineraries = homeViewModel.itineraryList.value ?: emptyList()) {
              emptyList<Itinerary>() -> NoItinerariesMessage()
              else -> {
                DisplayContent(
                    itineraries = itineraries,
                    navigation = navigation,
...
          isActive = activeState
          resetIfNotActive(activeState, searchText, viewModel, onSearchActivated)
        },
        placeholder = {
          Text(
              placeholderText,
              modifier = Modifier.padding(start = 1.dp).testTag("searchBarText"),
              textAlign = TextAlign.Center,
              fontFamily = FontFamily(Font(R.font.montserrat_bold)),
              fontSize = 20.sp,
              fontWeight = FontWeight.Medium,
              letterSpacing = 0.15.sp,
              color = md_theme_grey)
...
 * @param onBackClicked: Function to call when the back button is clicked
 */
@Composable
fun DisplayLeadingIcon(isActive: Boolean, onBackClicked: () -> Unit) {
  if (isActive) {
    Icon(
        modifier = Modifier.clickable { onBackClicked() }.testTag("BackButton"),
        imageVector = Icons.AutoMirrored.Filled.ArrowBack,
        contentDescription = "Back")
  } else {
    Icon(imageVector = Icons.Default.Search, contentDescription = "Menu")
  }
}
...
                  } else {
                    searchText.value = ""
                    viewModel.setSearchQuery(searchText.value)
                  }
                  onSearchActivated(isActive)
                }
                .testTag("ClearButton"),
        imageVector = Icons.Default.Close,
        contentDescription = "Clear text field")
  }
}

/**
...
 * @return the placeholder text to display in the search bar
 */
fun getPlaceholderText(selectedFilterType: FilterType): String {
  return when (selectedFilterType) {
    FilterType.FLAME -> "Example: <500"
    FilterType.PIN -> "Example: EPFL"
    FilterType.TITLE -> "Find Itineraries"
    FilterType.USERNAME -> "Search for a User"
    FilterType.FAVOURITES -> "Find Favourites"
  }
}

/**
...
  val usermail = AmbientUserProfile.current.userProfile.value.mail
  val isRefreshing = remember { mutableStateOf(false) }
  PullToRefreshLazyColumn(
      modifier =
          Modifier.fillMaxSize()
              .padding(goodPadding)
              .testTag("ItineraryList")
              .background(color = MaterialTheme.colorScheme.background),
      items = itineraries,
      isRefreshing = isRefreshing.value,
      onRefresh = {
        isRefreshing.value = true
        homeViewModel.fetchItineraries {
...
