<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="Home"
        android:icon="@drawable/home"/>
    <item
        android:id="@+id/maps"
        android:title="Maps"
        android:icon="@drawable/maps"/>
    <item
        android:id="@+id/record"
        android:title="Record"
        android:icon="@drawable/record"/>
    <item
        android:id="@+id/profile"
        android:title="Profile"
        android:icon="@drawable/profile"/>
</menu>