...
  /** Maximum number of characters for the username */
  val MAX_CHARS_USERNAME = 30

  Scaffold(
      topBar = {},
      bottomBar = { NavigationBar(navigation) },
      modifier = Modifier.testTag("UserProfileEditScreen")) { innerPadding ->
        Column(
            modifier =
                Modifier.fillMaxSize()
                    .padding(innerPadding)
                    .padding(top = 37.dp, bottom = 25.dp, start = 25.dp, end = 25.dp)
                    .background(md_theme_light_dark, shape = RoundedCornerShape(20.dp)),
...
            Button(
                onClick = { navigation.goBack() },
                colors =
                    ButtonDefaults.buttonColors(
                        containerColor = Color.Transparent,
                        contentColor = MaterialTheme.colorScheme.onSurface),
                modifier = Modifier.testTag("GoBackButton")) {
                  Icon(imageVector = Icons.Filled.ArrowBack, contentDescription = "Back")
                }
          }
          val showArrow by remember {
            derivedStateOf { scrollState.maxValue > 0 && scrollState.value < scrollState.maxValue }
          }
...
        }
      },
      colors =
          ButtonDefaults.filledTonalButtonColors(
              containerColor = md_theme_orange, contentColor = Color.White)) {
        Text(
            text = "Save",
            fontSize = 15.sp,
            fontFamily = Montserrat,
            fontWeight = FontWeight.SemiBold,
            color = Color.White)
      }
}
...
